--- a/0.9.15/graphite/conf/apache/sites-enabled/graphite.conf
+++ b/0.9.15/graphite/conf/apache/sites-enabled/graphite.conf
@@ -34,7 +34,7 @@ WSGISocketPrefix /var/run/apache2/wsgi
 
         # XXX You will need to create this file! There is a graphite.wsgi.example
         # file in this directory that you can safely use, just copy it to graphite.wgsi
-        WSGIScriptAlias / /opt/graphite/conf/graphite.wsgi 
+        WSGIScriptAlias / /opt/graphite/conf/graphite.wsgi
 
         # XXX To serve static files, either:
         # django-admin.py collectstatic --noinput --settings=graphite.settings
@@ -47,22 +47,34 @@ WSGISocketPrefix /var/run/apache2/wsgi
         <Location "/content/">
                 SetHandler None
         </Location>
+        <Directory /opt/graphite/webapp/content/>
+                Order deny,allow
+                Allow from all
+                Require all granted
+        </Directory>
+
+
 
         # XXX In order for the django admin site media to work you
         # must change @DJANGO_ROOT@ to be the path to your django
         # installation, which is probably something like:
         # /usr/lib/python2.6/site-packages/django
-        Alias /media/ "@DJANGO_ROOT@/contrib/admin/media/"
+        Alias /media/ "/usr/lib/python2.7/dist-packages/django/contrib/admin/media/"
         <Location "/media/">
                 SetHandler None
         </Location>
+        <Directory /usr/lib/python2.7/dist-packages/django>
+                Order deny,allow
+                Allow from all
+                Require all granted
+        </Directory>
 
         # The graphite.wsgi file has to be accessible by apache. It won't
         # be visible to clients because of the DocumentRoot though.
         <Directory /opt/graphite/conf/>
                 Order deny,allow
                 Allow from all
-		Require all granted
+		            Require all granted
         </Directory>
 
 </VirtualHost>
